adapter异常处理优化, 自定义数据库方言扩展优化